# linreg-core

./: .gitignore  CHANGELOG.md  Cargo.toml  MANIFEST.in  Publishing_Instructions_Reminder.md  README.md  build.rs  core_bench_output.txt  linreg_core.def  linreg_core.pyi  pyproject.toml  rustfmt.toml  show_coverage.py
.cargo/: config.toml
.github/: coverage-badge.json
.github/workflows/: ci.yml  deploy.yml  linreg-core.yml  nightly.yml
VBA_Example/: ExampleMacros.bas  LinRegCore.bas  linreg_core_example_workbook_0_8_0.xlsm  linreg_core_example_workbook_0_8_1.xlsm
WASM_Example/: index.html  linear-regression.html
WASM_Example/css/: styles.css
WASM_Example/js/: README.md  linreg_core.d.ts  linreg_core.js  linreg_core_bg.wasm  linreg_core_bg.wasm.d.ts  logic.js  package.json
WASM_Example/js/modules/: charts.js  core.js  data.js  diagnostics.js  featureImportance.js  regularized.js  ui.js  utils.js
XLL_Example/: linreg_core_xll_x64.xll
benches/: core.rs  diagnostics.rs  distributions.rs  linalg.rs  pressure.rs  runner.rs
examples/: basic_usage.rs  comprehensive_example.rs  cross_validation.rs  diagnostics.rs  loess_example.rs
examples/Python/: basic_ols.py  comprehensive_example.py  cross_validation.py  diagnostics.py  loess_example.py  prediction_intervals.py  regularized.py  serialization_example.py  weighted_regression.py
examples/Rust/: comprehensive_example.rs  feature_importance_example.rs  polynomial_example.rs  prediction_intervals.rs  regularized_regression.rs  serialization_example.rs  verify_nightly.rs  weighted_regression.rs
examples/WASM/: basic_ols.html  cross_validation.html  diagnostics.html  loess.html  prediction_intervals.html  regularized.html  serialization.html  weighted_regression.html
src/: core.rs  distributions.rs  error.rs  lib.rs  linalg.rs  stats.rs  wasm.rs
src/cross_validation/: kfold.rs  metrics.rs  mod.rs  splits.rs  types.rs
src/diagnostics/: anderson_darling.rs  breusch_godfrey.rs  breusch_pagan.rs  cooks_distance.rs  dfbetas.rs  dffits.rs  durbin_watson.rs  harvey_collier.rs  helpers.rs  jarque_bera.rs  mod.rs  rainbow.rs  reset.rs  shapiro_wilk.rs  types.rs  vif.rs  white.rs
src/feature_importance/: mod.rs  permutation.rs  shap.rs  standardized.rs  types.rs  vif.rs
src/ffi/: cross_validation.rs  diagnostics.rs  mod.rs  ols.rs  polynomial.rs  prediction_intervals.rs  regularized.rs  store.rs  types.rs  utils.rs
src/loess/: core.rs  mod.rs  neighbors.rs  normalize.rs  predict.rs  robust.rs  tests.rs  types.rs  weights.rs  wls.rs
src/polynomial/: features.rs  fit.rs  mod.rs  predict.rs  regularized.rs  types.rs
src/prediction_intervals/: mod.rs
src/python/: cross_validation_impl.rs  csv_impl.rs  diagnostics_impl.rs  error.rs  feature_importance_impl.rs  loess_impl.rs  mod.rs  ols_impl.rs  polynomial_impl.rs  prediction_intervals_impl.rs  regularized_impl.rs  results.rs  serialization_impl.rs  stats_impl.rs  types.rs  wls_impl.rs
src/python/results/: diagnostics.rs  feature_importance.rs  mod.rs  regression.rs  utils.rs
src/regularized/: elastic_net.rs  lasso.rs  mod.rs  path.rs  preprocess.rs  ridge.rs
src/serialization/: json.rs  mod.rs  traits.rs  types.rs
src/wasm/: cross_validation.rs  csv.rs  diagnostics.rs  domain.rs  feature_importance.rs  loess.rs  mod.rs  polynomial.rs  prediction_intervals.rs  regression.rs  regularized.rs  serialization.rs  stats.rs  tests.rs
src/weighted_regression/: mod.rs  wls.rs
src/xll/: convert.rs  entrypoint.rs  mod.rs  register.rs  types.rs
tests/: ffi_tests.rs  ffi_vba_tests.rs  loess_integration_test.rs  ridge.rs  wasm_tests.rs  xll_tests.rs
tests/ffi/vba/: README.md  common.rs  cross_validation.rs  diagnostics.rs  lib.rs  mod.rs  ols.rs  polynomial.rs  prediction_intervals.rs  regularized.rs  utilities.rs
tests/python/: conftest.py  test_csv.py  test_diagnostics.py  test_diagnostics_coverage.py  test_error_messages.py  test_feature_importance.py  test_integration.py  test_loess.py  test_numeric_edge_cases.py  test_ols.py  test_performance.py  test_polynomial.py  test_prediction_intervals.py  test_regularized.py  test_serialization.py  test_stats.py  test_types.py  test_wls.py
tests/ridge_modules/: baseline.rs  glmnet_audit.rs  mod.rs  verification.rs
tests/unit/: core_tests.rs  cross_validation_tests.rs  diagnostics_tests.rs  distributions_tests.rs  error_tests.rs  feature_importance_tests.rs  glmnet_algorithm_tests.rs  input_validation_tests.rs  linalg_tests.rs  loess_tests.rs  main.rs  polynomial_tests.rs  regularized_tests.rs  serialization_tests.rs
tests/unit/diagnostics/: autocorrelation.rs  heteroscedasticity.rs  influence.rs  linearity.rs  mod.rs  normality.rs
tests/unit/distributions/: gamma_beta.rs  mod.rs  normal.rs  sampling_distributions.rs
tests/unit/linalg/: basic_tests.rs  column_ops_tests.rs  common.rs  edge_case_tests.rs  inversion_tests.rs  linpack_qr_tests.rs  mod.rs  nalgebra_comparison.rs  numerical_accuracy_tests.rs  ops_tests.rs  property_tests.rs  qr_tests.rs  tolerance_tests.rs  vector_functions_tests.rs
tests/validation/: anderson_darling.rs  breusch_godfrey.rs  breusch_pagan.rs  common.rs  cooks_distance.rs  core_regression.rs  cross_validation.rs  dfbetas.rs  dffits.rs  durbin_watson.rs  elastic_net.rs  feature_importance.rs  harvey_collier.rs  jarque_bera.rs  loess.rs  main.rs  ols_by_dataset.rs  polynomial.rs  prediction_intervals.rs  rainbow.rs  regularized.rs  reset.rs  shapiro_wilk.rs  vif.rs  white.rs  wls.rs
tests/wasm/: diagnostic_tests.rs  feature_importance_tests.rs  fixtures.rs  integration_tests.rs  kfold_tests.rs  loess_tests.rs  mod.rs  ols_tests.rs  polynomial_tests.rs  prediction_intervals_tests.rs  regularized_tests.rs  serialization_tests.rs  utility_tests.rs  wls_tests.rs
tests/xll/: common.rs  cross_validation.rs  diagnostics.rs  errors.rs  mod.rs  ols.rs  polynomial.rs  prediction_intervals.rs  regularized.rs  version.rs  wls.rs
verification/datasets/csv/: faithful.csv  iris.csv  lh.csv  synthetic_autocorrelated.csv  synthetic_collinear.csv  synthetic_heteroscedastic.csv  (+8 more)
(+1430 files in other folders)
