[package]
name = "linreg-core"
version = "0.2.1"
edition = "2021"
description = "Lightweight linear regression (OLS, Ridge, Lasso) with diagnostic tests. Pure Rust - no external math dependencies."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jesse-anderson/linreg-core"
homepage = "https://jesse-anderson.net"
documentation = "https://docs.rs/linreg-core"
readme = "README.md"
authors = ["Jesse Anderson"]
keywords = ["regression", "statistics", "linear-regression", "ridge", "lasso"]
categories = ["science", "mathematics", "wasm"]
exclude = [
    "tmpclaude*",
    # Exclude dev-only files from published crate
    ".github/",
    ".gitignore",
    # Exclude Python venv from published crate (large, not needed)
    # Keep R/Python scripts for manual verification by contributors
    "verification/.venv/",
    # Exclude proptest regression files (dev-only)
    "proptest-regressions/",
    # Exclude benchmark results and Criterion output (dev-only)
    "benches/results/",
    "target/criterion/",
    "AIC_BIC_TODO.md",
    "COVERAGE_MATRIX.md",
    "*TODO*.md",
    "generate_test_data.py",
    "core_bench_output.txt",
    "blog-*.md",
    # Exclude WASM example and pkg (demo only)
    "WASM_Example/",
    "criterion*/",
    "criterion_0_2_0",
    "flame*/",
]

[package.metadata.docs.rs]
# Disable default features (WASM) for docs.rs builds
# since wasm-bindgen doesn't build in docs.rs environment
features = []

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:js-sys",
    "dep:csv",
    "getrandom/js",
]
# Enable validation tests against R/Python reference values
# This includes test data JSON files in the published crate
validation = []

[dependencies]
# Core dependencies (always available)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM-specific dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Location"] }
js-sys = { version = "0.3", optional = true }
csv = { version = "1.3", optional = true }

# getrandom needs js feature for WASM
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
proptest = "1.4"
paste = "1.0"
csv = "1.3"  # For validation tests
criterion = "0.5"
rustc_version = "0.4"
humantime = "2.1"

[[bench]]
name = "core"
harness = false

[[bench]]
name = "linalg"
harness = false

[[bench]]
name = "distributions"
harness = false

[[bench]]
name = "diagnostics"
harness = false

[[bench]]
name = "pressure"
harness = false

[[bench]]
name = "runner"
harness = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
