[package]
name = "linreg-core"
version = "0.7.0"
edition = "2021"
description = "Lightweight linear regression (OLS, Ridge, Lasso, Elastic Net) with diagnostic tests. Pure Rust - no external math dependencies."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jesse-anderson/linreg-core"
homepage = "https://jesse-anderson.net/linreg-core/"
documentation = "https://docs.rs/linreg-core"
readme = "README.md"
authors = ["Jesse Anderson"]
keywords = ["regression", "statistics", "linear-regression", "ridge", "lasso"]
categories = ["science", "mathematics", "wasm"]
exclude = [
    # Dev artifacts not needed for library publishing
    "Cargo.lock",
    "Cargo.toml.orig",
    "rustfmt.toml",

    # Exclude dev-only files from published crate
    ".github/",
    ".gitignore",
    ".gitattributes",

    # Exclude Python venv from published crate (large, not needed)
    "verification/.venv/",
    "venv_py*/",

    # Keep R/Python scripts for manual verification by contributors

    # Exclude proptest regression files (dev-only)
    "proptest-regressions/",

    # Exclude benchmark results and Criterion output (dev-only)
    "benches/results/",
    "target/criterion/",
    "core_bench_output.txt",
    "criterion*/",
    "criterion_0_2_0",
    "coverage.json",

    # Profiling results
    "flame*/",

    #Dev notes and docs
    "AIC_BIC_TODO.md",
    "COVERAGE_MATRIX.md",
    "*TODO*.md",
    "blog-*.md",
    "debug_*/",
    "tmpclaude*",
    "*claude*/",
    "docs*/",

    # Test/dev scripts
    #WASM demo ( not needed by library users)
    "WASM_Example/",
    "generate_test_data.py",

    # Python-specific files (not needed for pure Rust crate)
    "pyproject.toml",
    "linreg_core.pyi",
    "src/python/",
]

[package.metadata.docs.rs]
# Disable default features (WASM) for docs.rs builds
# since wasm-bindgen doesn't build in docs.rs environment
features = []

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:js-sys",
    "dep:csv",
    "getrandom/js",
]
# Enable Python bindings via PyO3
python = ["pyo3", "numpy"]
# Enable NumPy array support (implicitly enabled by python feature)
numpy = ["dep:numpy"]
# Enable validation tests against R/Python reference values
# This includes test data JSON files in the published crate
validation = []

[dependencies]
# Core dependencies (always available)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM-specific dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Location"] }
js-sys = { version = "0.3", optional = true }
csv = { version = "1.3", optional = true }

# getrandom needs js feature for WASM
getrandom = { version = "0.2", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["serde", "extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
csv = "1.3"  # For validation tests

# Dev-dependencies that only work on native platforms (not WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.4"
criterion = "0.5"
rustc_version = "0.4"
humantime = "2.1"
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "core"
harness = false

[[bench]]
name = "linalg"
harness = false

[[bench]]
name = "distributions"
harness = false

[[bench]]
name = "diagnostics"
harness = false

[[bench]]
name = "pressure"
harness = false

[[bench]]
name = "runner"
harness = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
