[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "linreg-core"
version = "0.7.0"
description = "Lightweight linear regression (OLS, Ridge, Lasso, Elastic Net) with diagnostic tests. Pure Rust - no external math dependencies."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
keywords = ["regression", "statistics", "linear-regression", "ridge", "lasso"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://jesse-anderson.net/linreg-core/"
Repository = "https://github.com/jesse-anderson/linreg-core"
Documentation = "https://docs.rs/linreg-core"
"Live Demo" = "https://jesse-anderson.net/linreg-core/"

[tool.maturin]
features = ["python"]
# Module name (will create linreg_core.so/pyd)
module-name = "linreg_core"
# Strip symbols from release builds
strip = true
# Look for Python files (.pyi) in the project root
python-source = "."
